fixed alignment in lists

--- a/src/app/lesson-list/lesson-list.component.css
+++ b/src/app/lesson-list/lesson-list.component.css
@@ -1,3 +1,11 @@
 p   {
     margin-bottom: 0px;
 }
+
+.list-text {
+    font-size: 1.25rem;
+    line-height: 1.5rem;
+    height: 4.5rem;
+    align-content: center;
+    font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
